[package]
authors = ["LIT Protocol Team"]
categories = ["cryptography"]
description = "Hierarchical Derived keys for LIT Protocol"
documentation = "https://docs.rs/hd-keys-curves-wasm"
edition = "2021"
homepage = "https://github.com/LIT-Protocol/hd-keys-curves-wasm"
keywords = ["hierarchical", "bip32", "lit", "wasm", "key"]
license = "Apache-2.0 OR MIT"
name = "hd-keys-curves-wasm"
readme = "README.md"
repository = "https://github.com/LIT-Protocol/hd-keys-curves-wasm"
version = "1.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["k256"]
curve25519 = ["dep:curve25519-dalek-ml", "dep:sha2"]
ed448 = ["dep:ed448-goldilocks-plus", "dep:sha3"]
k256 = ["dep:k256", "dep:sha2"]
p256 = ["dep:p256", "dep:sha2"]
p384 = ["dep:p384", "dep:sha2"]
bls = ["dep:blsful", "dep:sha2"]
jubjub = ["dep:jubjub", "dep:blake2"]

[dependencies]
blake2 = { version = "0.10", default-features = false, optional = true }
blsful = { version = "2.5.7", default-features = false, features = ["rust"], optional = true }
curve25519-dalek-ml = { version = "4.2.1" , default-features = false, features = ["digest", "group"], optional = true }
ecdsa = { version = "0.16", features = ["arithmetic"] }
ed448-goldilocks-plus = { version = "0.11.2", optional = true }
elliptic-curve = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve"] }
digest = { version = "0.10.7", default-features = false, features = ["alloc"] }
jubjub = { version = "0.10", default-features = false, git = "https://github.com/LIT-Protocol/jubjub.git", package = "jubjub-plus", optional = true }
k256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve", "expose-field"], optional = true }
p256 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve", "expose-field"], optional = true }
p384 = { version = "0.13", default-features = false, features = ["arithmetic", "hash2curve", "expose-field"], optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }
sha3 = { version = "0.10", default-features = false, optional = true }
subtle = "2.5"
wasm-bindgen = "0.2.92"

[target.'cfg(target_pointer_width = "32")'.dependencies]
getrandom = { version = "0.2.14", features = ["js"] }

[dev-dependencies]
rand_core = { version = "0.6.4", features = ["std"] }
rand_chacha = "0.3.1"
